# learn-ai-agents

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.omc/: project-memory.json
claude-code/: ch01.py  ch02.py  ch03.py
deepagents/: README.md  acp.md  async_subagents.py  backend.py  ch_01_quickstart.py  ch_01_quickstart.qa.md  ch_02_research.py  ch_03_filesystem.py  ch_03_filesystem.qa.md  ch_04_backend.py  ch_04_backend.qa.md  ch_05_permissions.py  ch_05_permissions.qa.md  ch_06_hitl.py  ch_07_stream.py  ch_08_structured_output.py  ch_09_skills_memory.py  ch_10_combo.py  ch_11_sandbox_backend.py  ch_12_interpreter.py  ch_13_context_offloading.py  ch_14_summarization.py  ch_15_store_memory.py  ch_16_runtime_context.py  ch_17_prompt_caching.py  ch_18_async_subagents.py  ch_19_compiled_subagent.py  ch_20_custom_backend_middleware.py  ch_21_multimodal.py  ch_22_profiles.py  ch_23_hitl_edit_respond.py  ch_24_conditional_interrupt.py  ch_25_local_shell_backend.py  ch_26_going_to_production.md  ch_27_dcode.md  ch_28_acp.md  ch_29_vs_claude_agent_sdk.md  combo.py  compiled_subagent.py  conditional_interrupt.py  (+24 more)
langchain/: README.md  agents_advanced.py  ch_01_models.py  ch_02_messages.py  ch_03_tools.py  ch_04_long_term_memory.py  ch_05_runtime.py  ch_06_mcp.py  ch_07_retrieval_rag.py  ch_08_event_streaming.py  ch_09_middleware_prebuilt_model.py  ch_10_middleware_prebuilt_tools.py  ch_11_middleware_prebuilt_agent.py  ch_12_middleware_custom_hooks.py  ch_13_middleware_model_guardrails.py  ch_14_structured_output.py  ch_15_agents_advanced.py  ch_16_context_engineering.py  ch_17_quickstart.py  ch_18_stream.py  ch_19_combo.py  (+28 more)
(+81 files in other folders)
