[project]
name = "learn-ai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.101.0",
    "chainlit>=2.11.1",
    "deepagents>=0.6.12",
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.8",
    "langchain-tavily>=0.2.18",
    "langchain-voyageai>=0.4.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "python-dotenv>=1.2.2",
]

[tool.pytest.ini_options]
# ch_ 前缀的测试文件也需要被 pytest 发现
python_files = ["test_*.py", "ch_*_test_*.py"]
